@@ -1,6 +1,7 @@
 # dev:
   * Add `-r` option: run rootless container.
   * Add an easter egg: `ruri AwA`.
+  * Rewrite Makefile, you can `make -j$(nproc)` now.
   * General bug fixes.
 # v2.3:
   * `-hh` => `-H`.
